# ipmimanager

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md
